# bitcut

./: .gitignore  README.md  pyproject.toml
scripts/: clean.py
src/bitcut/: cli.py  engine.py  parse.py
tests/: test_cli.py  test_engine.py  test_parse.py
